--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,19 @@
+:root {
+  --bg-color: #fefff8;
+  --text-color: #000;
+}
+
+
 html, body {
   margin: 0;
   padding: 0;
   height: 100%;
   width: 100%;
+  overflow-y: hidden;
 }
 
 body {
-  background-color: #fefff8;
+  background-color: var(--bg-color);
+  transition: background-color 0.4s ease-in-out;
+  font-family: "'Inria Sans', sans-serif";
 }
